--- a/tapbpm.html
+++ b/tapbpm.html
@@ -9,7 +9,8 @@
 		#displaycontainer{
 			border-radius:30px;
 			border-style:solid;
-			border-width:1px;
+			border-width:2px;
+			border-color:#848484;
 			margin:10px;
 		}
 		
@@ -42,18 +43,25 @@
 		.separator{
 			border-style:solid;
 			border-width:1px;
+			border-color:#848484;
 		}
 		.label{
 			font-size:13px;
 			position: relative;
 			bottom: 0;
+			color:#848484;
 		}
 		body{
 			font-family:Arial;
+			color:#333333;
 		}
 		
 		p{
 			font-weight:bold;
+		}
+		
+		h2{
+			
 		}
 	</style>
 	<script>
